--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,9 @@
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	
 	<groupId>com.berkayd06</groupId>
 	<artifactId>spring-boot-query-logger-starter</artifactId>
-	<version>1.0.1</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	
 	<description>A Spring Boot starter for logging and cancelling slow SQL queries. Automatically detects JPA and native SQL queries, formats them, and can cancel queries that exceed configured thresholds.</description>
@@ -38,47 +37,36 @@
 	</properties>
 
 	<dependencies>
-		<!-- Spring Boot Auto Configuration (provided scope - kullanıcının Spring Boot versiyonunu kullanır) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure</artifactId>
 			<version>2.1.3.RELEASE</version>
 			<scope>provided</scope>
 		</dependency>
-
-		<!-- Configuration Processor (annotation processing için) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<version>2.1.3.RELEASE</version>
 			<optional>true</optional>
 		</dependency>
-
-		<!-- SLF4J Logger API (provided scope - kullanıcının logging implementation'ını kullanır) -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.36</version>
 			<scope>provided</scope>
 		</dependency>
-
-		<!-- Hibernate (optional - sadece Hibernate kullanıldığında) -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>5.4.27.Final</version>
 			<optional>true</optional>
 		</dependency>
-
-		<!-- Spring JDBC (provided scope) -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
 			<version>5.1.5.RELEASE</version>
 			<scope>provided</scope>
 		</dependency>
-
-		<!-- Test Dependencies -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -95,7 +83,6 @@
 
 	<dependencyManagement>
 		<dependencies>
-			<!-- Spring Boot BOM - versionları yönetmek için -->
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
@@ -108,7 +95,6 @@
 
 	<build>
 		<plugins>
-			<!-- Maven Compiler Plugin -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -119,8 +105,6 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
-
-			<!-- Maven Source Plugin - kaynak kodları JAR'a ekler -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
@@ -135,7 +119,6 @@
 				</executions>
 			</plugin>
 
-			<!-- Maven Javadoc Plugin -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
@@ -159,8 +142,6 @@
 				</executions>
 			</plugin>
 
-			<!-- Maven GPG Plugin - Maven Central için imzalama -->
-			<!-- Sadece release profili ile çalışır (mvn clean install -Prelease) -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-gpg-plugin</artifactId>
@@ -181,7 +162,6 @@
 		</plugins>
 	</build>
 
-	<!-- Maven Central / Sonatype OSS için gerekli -->
 	<distributionManagement>
 		<snapshotRepository>
 			<id>ossrh</id>
