--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,9 @@
 		<java.version>1.8</java.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<spring-boot.version>2.1.3.RELEASE</spring-boot.version>
+		<spring.version>5.1.5.RELEASE</spring.version>
+		<hibernate.version>5.4.27.Final</hibernate.version>
 		<gpg.skip>true</gpg.skip>
 	</properties>
 
@@ -40,31 +43,25 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure</artifactId>
-			<version>2.1.3.RELEASE</version>
+			<version>${spring-boot.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
-			<version>2.1.3.RELEASE</version>
+			<version>${spring-boot.version}</version>
 			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.36</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>5.4.27.Final</version>
+			<version>${hibernate.version}</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
-			<version>5.1.5.RELEASE</version>
+			<version>${spring.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -83,13 +80,6 @@
 
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-dependencies</artifactId>
-				<version>2.7.18</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -161,6 +151,86 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>spring-boot-2.1</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<spring-boot.version>2.1.3.RELEASE</spring-boot.version>
+				<spring.version>5.1.5.RELEASE</spring.version>
+				<hibernate.version>5.4.27.Final</hibernate.version>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>spring-boot-2.7</id>
+			<properties>
+				<spring-boot.version>2.7.18</spring-boot.version>
+				<spring.version>5.3.31</spring.version>
+				<hibernate.version>5.6.15.Final</hibernate.version>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>spring-boot-3.0</id>
+			<properties>
+				<spring-boot.version>3.0.13</spring-boot.version>
+				<spring.version>6.0.15</spring.version>
+				<hibernate.version>6.1.7.Final</hibernate.version>
+				<maven.compiler.source>17</maven.compiler.source>
+				<maven.compiler.target>17</maven.compiler.target>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>spring-boot-3.1</id>
+			<properties>
+				<spring-boot.version>3.1.8</spring-boot.version>
+				<spring.version>6.0.17</spring.version>
+				<hibernate.version>6.2.18.Final</hibernate.version>
+				<maven.compiler.source>17</maven.compiler.source>
+				<maven.compiler.target>17</maven.compiler.target>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>spring-boot-3.2</id>
+			<properties>
+				<spring-boot.version>3.2.2</spring-boot.version>
+				<spring.version>6.1.3</spring.version>
+				<hibernate.version>6.4.1.Final</hibernate.version>
+				<maven.compiler.source>17</maven.compiler.source>
+				<maven.compiler.target>17</maven.compiler.target>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>java-11</id>
+			<properties>
+				<maven.compiler.source>11</maven.compiler.source>
+				<maven.compiler.target>11</maven.compiler.target>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>java-17</id>
+			<properties>
+				<maven.compiler.source>17</maven.compiler.source>
+				<maven.compiler.target>17</maven.compiler.target>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>java-21</id>
+			<properties>
+				<maven.compiler.source>21</maven.compiler.source>
+				<maven.compiler.target>21</maven.compiler.target>
+			</properties>
+		</profile>
+	</profiles>
 
 	<distributionManagement>
 		<snapshotRepository>
