delete unnecessary things

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	<developers>
 		<developer>
 			<name>Berkay Demirbas</name>
-			<email>berkay.demirbas@hotmail.com/email</email>
+			<email>berkay.demirbas@hotmail.com</email>
 		</developer>
 	</developers>
 
